<resources>
    <string name="app_name" translatable="false">Led\'s Go</string>
    <string name="create_user">Sign Up</string>
    <string name="password">Contrasenya</string>
    <string name="startsession">Iniciar sessio</string>
    <string name="logoDescription">logo de la applicació</string>
    <string name="confirmPassword">Confirmar Contrasenya</string>
    <string name="email">Correu Electrònic</string>
    <string name="name">UserName</string>
    <string name="username">Nom d\'usuari</string>
    <string name="username_email">Nom d\'usuari / Email</string>
    <string name="strips_title">TIRAS</string>
    <string name="user">Usuari</string>
    <string name="Apagar">Apagar</string>
    <string name="reset">Reiniciar</string>
    <string name="error">Report Error</string>
    <string name="send_error">Report Error</string>
    <string name="logout">Log Out</string>
    <string name="patrones">Patrones</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ConfirmEmail">Enter the random String, that we send you to your email</string>
    <string name="generatedString">Generated String</string>
    <string name="comprovar">Comprovar</string>
    <string name="reenviar">Reenviar</string>
    <string name="save">Save</string>
    <string name="Datos">Datos</string>
    <string name="New_Pass">New Password</string>
    <string name="Confirm_NewPass">Confirm New Password</string>
    <string name="Save_NewPass">Save New Password</string>
    <string name="GeneralFrag">General</string>
    <string name="GroupsFrag">Groups</string>
    <string name="StripsFrag">Strips</string>
    <string name="groups_title">Groups</string>
    <string name="color">Color</string>
    <!-- TODO: Remove or change this placeholder text -->
    <array name="Strips">
        <item>Strip1</item>
        <item>Strip2</item>
        <item>Strip3</item>
        <item>Strip4</item>
        <item>Strip5</item>
        <item>Strip6</item>
        <item>Strip7</item>
        <item>Strip8</item>
    </array>
    <array name="Paises">
        <item>Paises</item>
        <item>Afganistán</item>
        <item>Albania</item>
        <item>Alemania</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua y Barbuda</item>
        <item>Arabia Saudita</item>
        <item>Argelia</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaiyán</item>
        <item>Bahamas</item>
        <item>Bangladés</item>
        <item>Barbados</item>
        <item>Baréin</item>
        <item>Bélgica</item>
        <item>Belice</item>
        <item>Benín</item>
        <item>Bielorrusia</item>
        <item>Birmania</item>
        <item>Bolivia</item>
        <item>Bosnia y Herzegovina</item>
        <item>Botsuana</item>
        <item>Brasil</item>
        <item>Brunéi</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Bután</item>
        <item>Cabo Verde</item>
        <item>Camboya</item>
        <item>Camerún</item>
        <item>Canadá</item>
        <item>Catar</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Chipre</item>
        <item>Ciudad del Vaticano</item>
        <item>Colombia</item>
        <item>Comoras</item>
        <item>Corea del Norte</item>
        <item>Corea del Sur</item>
        <item>Costa de Marfil</item>
        <item>Costa Rica</item>
        <item>Croacia</item>
        <item>Cuba</item>
        <item>Dinamarca</item>
        <item>Dominica</item>
        <item>Ecuador</item>
        <item>Egipto</item>
        <item>El Salvador</item>
        <item>Emiratos Árabes Unidos</item>
        <item>Eritrea</item>
        <item>Eslovaquia</item>
        <item>Eslovenia</item>
        <item>España</item>
        <item>Estados Unidos</item>
        <item>Estonia</item>
        <item>Etiopía</item>
        <item>Filipinas</item>
        <item>Finlandia</item>
        <item>Fiyi</item>
        <item>Francia</item>
        <item>Gabón</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Ghana</item>
        <item>Granada</item>
        <item>Grecia</item>
        <item>Guatemala</item>
        <item>Guyana</item>
        <item>Guinea</item>
        <item>Guinea ecuatorial</item>
        <item>Guinea-Bisáu</item>
        <item>Haití</item>
        <item>Honduras</item>
        <item>Hungría</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Irak</item>
        <item>Irán</item>
        <item>Irlanda</item>
        <item>Islandia</item>
        <item>Islas Marshall</item>
        <item>Islas Salomón</item>
        <item>Israel</item>
        <item>Italia</item>
        <item>Jamaica</item>
        <item>Japón</item>
        <item>Jordania</item>
        <item>Kazajistán</item>
        <item>Kenia</item>
        <item>Kirguistán</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Laos</item>
        <item>Lesoto</item>
        <item>Letonia</item>
        <item>Líbano</item>
        <item>Liberia</item>
        <item>Libia</item>
        <item>Liechtenstein</item>
        <item>Lituania</item>
        <item>Luxemburgo</item>
        <item>Macedonia del Norte</item>
        <item>Madagascar</item>
        <item>Malasia</item>
        <item>Malaui</item>
        <item>Maldivas</item>
        <item>Malí</item>
        <item>Malta</item>
        <item>Marruecos</item>
        <item>Mauricio</item>
        <item>Mauritania</item>
        <item>México</item>
        <item>Micronesia</item>
        <item>Moldavia</item>
        <item>Mónaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Nicaragua</item>
        <item>Níger</item>
        <item>Nigeria</item>
        <item>Noruega</item>
        <item>Nueva Zelanda</item>
        <item>Omán</item>
        <item>Países Bajos</item>
        <item>Pakistán</item>
        <item>Palaos</item>
        <item>Panamá</item>
        <item>Papúa Nueva Guinea</item>
        <item>Paraguay</item>
        <item>Perú</item>
        <item>Polonia</item>
        <item>Portugal</item>
        <item>Reino Unido</item>
        <item>República Centroafricana</item>
        <item>República Checa</item>
        <item>República del Congo</item>
        <item>República</item>
        <item>Democrática del Congo</item>
        <item>República Dominicana</item>
        <item>Ruanda</item>
        <item>Rumanía</item>
        <item>Rusia</item>
        <item>Samoa</item>
        <item>San Cristóbal y Nieves</item>
        <item>San Marino</item>
        <item>San Vicente y las Granadinas</item>
        <item>Santa Lucía</item>
        <item>Santo Tomé y Príncipe</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leona</item>
        <item>Singapur</item>
        <item>Siria</item>
        <item>Somalia</item>
        <item>Sri Lanka</item>
        <item>Suazilandia</item>
        <item>Sudáfrica</item>
        <item>Sudán</item>
        <item>Sudán del Sur</item>
        <item>Suecia</item>
        <item>Suiza</item>
        <item>Surinam</item>
        <item>Tailandia</item>
        <item>Tanzania</item>
        <item>Tayikistán</item>
        <item>Timor Oriental</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad y Tobago</item>
        <item>Túnez</item>
        <item>Turkmenistán</item>
        <item>Turquía</item>
        <item>Tuvalu</item>
        <item>Ucrania</item>
        <item>Uganda</item>
        <item>Uruguay</item>
        <item>Uzbekistán</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Yemen</item>
        <item>Yibuti</item>
        <item>Zambia</item>
        <item>Zimbabue</item>
        <item>Vietnam</item>
    </array>

</resources>