<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_100"
    tools:context=".LogIn">

    <LinearLayout
        android:id="@+id/linearLayout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="3dp">

        <ImageView
            android:id="@+id/imageView_Errors_logo"
            android:layout_width="185dp"
            android:layout_height="77dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/logoDescription"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/logocompleto" />

        <EditText
            android:id="@+id/editText_Error_Email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:autofillHints=""
            android:backgroundTint="@color/white_50"
            android:ems="10"
            android:fontFamily="@font/source_code_pro_medium"
            android:hint="@string/username_email"
            android:inputType="textPersonName|textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white_50"
            android:textColorLink="@color/white"
            android:textCursorDrawable="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText_Errors_RepError"
            android:layout_width="319dp"
            android:layout_height="126dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/white_50"
            android:ems="10"
            android:fontFamily="@font/source_code_pro_medium"
            android:hint="@string/error"
            android:importantForAutofill="no"
            android:inputType="none"
            android:textColor="@color/white"
            android:textColorHint="@color/white_50"
            android:textColorLink="@color/white"
            android:textCursorDrawable="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_Errors_SendError"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_black"
            android:text="@string/send_error"
            android:textColor="@color/purple_100"
            app:cornerRadius="0dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>