<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_100"
    tools:context=".LogIn">

    <LinearLayout
        android:id="@+id/linearLayout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_LogIn_logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/logoDescription"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/logocompleto" />

        <EditText
            android:id="@+id/editText_ForgotPass_NewPass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:autofillHints=""
            android:backgroundTint="@color/white_50"
            android:ems="10"
            android:fontFamily="@font/source_code_pro_medium"
            android:hint="@string/New_Pass"
            android:inputType="textPersonName|textPassword|textEmailAddress"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_50"
            android:textColorLink="@color/white"
            android:textCursorDrawable="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText_ForgotPass_ConfirmPass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:backgroundTint="@color/white_50"
            android:ems="10"
            android:fontFamily="@font/source_code_pro_medium"
            android:hint="@string/Confirm_NewPass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_50"
            android:textColorLink="@color/white"
            android:textCursorDrawable="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_ForgotPass_Save"
            android:layout_width="207dp"
            android:layout_height="57dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_code_pro_black"
            android:text="@string/Save_NewPass"
            android:textColor="@color/purple_100"
            app:cornerRadius="0dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>